Fixed bug with sCastle on Mobile devices and span for black pieces

--- a/style.css
+++ b/style.css
@@ -275,12 +275,23 @@ body {
     background-color: rgba(0, 0, 0, 0.8);
     padding: 20px;
     border-radius: 10px;
+    z-index: 20;
+}
+
+.dark-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
     z-index: 10;
+    display: none;
 }
 #Board {
     width: 100%;
     max-width: 600px;
-    height: auto;
+    max-height: 600px;
     aspect-ratio: 1/1;
     background-color: white;
     display: flex;
@@ -291,6 +302,7 @@ body {
     border-radius: 7px;
     overflow: hidden;
 }
+
 .ghost-image {
     position: absolute;
     pointer-events: none;
@@ -355,17 +367,19 @@ body {
     .Logo {
         width: 120px;
         height: 40px;
-        font-size: 24px;
     }
-
+    .message {
+        font-size: 24px;
+        padding: auto;
+    }
     .Logo a {
-        font-size: 16px;
+        font-size: 14px;
     }
 
     .openings-button,
     .About button {
         font-size: 12px;
-        padding: 10px 20px;
+        padding: 10px 15px;
     }
 
     #closeOpeningsButton,
